--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>zlato1.5</title>
+        <title>GRB-Audio</title>
 
         <link rel="icon" type="image/x-icon" href="assets/img/background.jpg">
-        <link rel="icon" type="image/x-icon" href="assets/img/profile2Leo.JPG">
-        <link rel="icon" type="image/x-icon" href="assets/img/profile3Leo.JPG">
+        <link rel="icon" type="image/x-icon" href="assets/pierreImg/1.jpeg">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
