--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             <section class="banner" data-scene>
                 <div class="container">
                     <div class="text landing-text" data-aos="zoom-out" data-aos-delay="1000">
-                        <h1>zlato 1.5</h1>
-                        <p>Immer auf der Suche nach dem Sinn. Nach was suchst du?</p>
+                        <h1>Pierre Jülch</h1>
+                        <p>Der letzte Mix/Master Engineer den du kontaktieren wirst!</p>
                     </div>
                     <div class="go-to-helper">
                         <a href="#" class="go-to go-to-mobile"></a>
@@ -180,7 +180,7 @@
                     <div class="footer-inner" data-aos="zoom-in-up">
                         <div class="col">
                             <div class="text">
-                                <h2>zlato 1.5</h2>
+                                <h2>GRB Audio</h2>
                             </div>
                         </div>
                         <div class="col">
@@ -224,7 +224,7 @@
 
             <div class="copyright">
                 <div class="container" data-aos="zoom-in-up" data-aos-offset="0">
-                    <p>© 2023 GRB Records | All Rights Reserved</p>
+                    <p>© 2024 GRB Records | All Rights Reserved</p>
                     <p>Design: Leonardo Jülch</p>
                 </div>
             </div>
