divider and services box

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <link rel="stylesheet" href="css/songs.css">
         <link rel="stylesheet" href="css/videos.css">
         <link rel="stylesheet" href="css/footer.css">
+        <link rel="stylesheet" href="css/services.css">
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
@@ -111,6 +112,58 @@
                     </div>
                 </div>
             </section>
+
+
+            <section class="divider text-center">
+                <div class="row align-items-center justify-content-center">
+                    <div class="col">
+                        <hr class="hr mx-auto hr-left" />
+                    </div>
+                    <div class="col-auto">
+                        <i class="fa-solid fa-sliders h3"></i>
+                    </div>
+                    <div class="col">
+                        <hr class="hr mx-auto hr-right" />
+                    </div>
+                </div>
+            </section>
+
+            <section class="services-feature">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4 col-sm-12">
+                            <div class="box box-1">
+                                <div class="box-content">
+                                    <i class="fa-solid fa-microphone box-content-font"></i>
+                                    <p class="box-content-font box-content-font-info">Record</p>
+                                    <p class="underline-service"></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-12">
+                            <div class="box box-2">
+                                <div class="box-content">
+                                    <i class="fa-solid fa-compact-disc box-content-font"></i>
+                                    <p class="box-content-font box-content-font-info">Mix</p>
+                                    <p class="underline-service"></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-12">
+                            <div class="box box-3">
+                                <div class="box-content">
+                                    <i class="fa-solid fa-sliders box-content-font"></i>
+                                    <p class="box-content-font box-content-font-info">Master</p>
+                                    <p class="underline-service"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+
             <!--
 
                         <section class="secVid"  data-scene>
