--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <link rel="stylesheet" href="css/videos.css">
         <link rel="stylesheet" href="css/footer.css">
         <link rel="stylesheet" href="css/services.css">
+        <link rel="stylesheet" href="css/recentArtists.css">
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
@@ -52,22 +53,22 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="mobile-logo">
-                            <h1 class="mobile-title mobile-media">zlato 1.5</h1>
+                            <h1 class="mobile-title mobile-media">GRB Audio</h1>
                         </div>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav navbar-align nav-items desktop-view">
                                 <div class="left-menu nav-fill">
                                     <ul>
-                                        <li><a class="nav-link text-light" href="https://open.spotify.com/intl-de/artist/2q1WHufNKknvEDy8loCR4O" target="_blank">SPOTIFY</a></li>
-                                        <li><a class="nav-link text-light" href="https://music.apple.com/us/artist/zlato1-5/1659210545" target="_blank">APPLE MUSIC</a></li>
-                                        <li><a class="nav-link text-light" href="https://soundcloud.com/zlato15" target="_blank">SOUNDCLOUD</a></li>
+                                        <li><a class="nav-link text-light" href="https://open.spotify.com/intl-de/artist/2q1WHufNKknvEDy8loCR4O" target="_blank">Record</a></li>
+                                        <li><a class="nav-link text-light" href="https://music.apple.com/us/artist/zlato1-5/1659210545" target="_blank">Mix</a></li>
+                                        <li><a class="nav-link text-light" href="https://soundcloud.com/zlato15" target="_blank">Master</a></li>
                                     </ul>
                                 </div>
                                 <div class="right-menu">
                                     <ul>
                                         <li><a class="nav-link text-light" href="https://www.instagram.com/zlato1.5/" target="_blank">INSTAGRAM</a></li>
-                                        <li><a class="nav-link text-light" href="https://www.youtube.com/channel/UCK_HqCtD0-UPrQY-oI0XIdw" target="_blank">YOUTUBE</a></li>
-                                        <li><a class="nav-link text-light" href="https://www.tiktok.com/@zlato1.5" target="_blank">TIKTOK</a></li>
+                                        <li><a class="nav-link text-light" href="https://www.youtube.com/channel/UCK_HqCtD0-UPrQY-oI0XIdw" target="_blank">Spotify</a></li>
+                                        <li><a class="nav-link text-light" href="https://www.tiktok.com/@zlato1.5" target="_blank">Contact</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -102,33 +103,36 @@
                     </div>
                 </div>
             </section>
+            <!--
+                        <section class="sec1" id="page-content" data-scene>
+                            <div class="container landing-text">
+                                <div class="sec1-inner">
+                                    <div class="text text-right" data-aos="zoom-out-left">
+                                        <img class="grb-logo" src="assets/img/grb%20Logo.jpeg" alt="logo">
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
 
-            <section class="sec1" id="page-content" data-scene>
-                <div class="container landing-text">
-                    <div class="sec1-inner">
-                        <div class="text text-right" data-aos="zoom-out-left">
-                            <img class="grb-logo" src="assets/img/grb%20Logo.jpeg" alt="logo">
-                        </div>
-                    </div>
-                </div>
-            </section>
 
+                        <section class="divider text-center ">
+                            <div class="row align-items-center justify-content-center">
+                                <div class="col">
+                                    <hr class="hr mx-auto hr-left" />
+                                </div>
+                                <div class="col-auto">
+                                    <i class="fa-solid fa-sliders h3"></i>
+                                </div>
+                                <div class="col">
+                                    <hr class="hr mx-auto hr-right" />
+                                </div>
+                            </div>
+                        </section>
 
-            <section class="divider text-center">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col">
-                        <hr class="hr mx-auto hr-left" />
-                    </div>
-                    <div class="col-auto">
-                        <i class="fa-solid fa-sliders h3"></i>
-                    </div>
-                    <div class="col">
-                        <hr class="hr mx-auto hr-right" />
-                    </div>
-                </div>
-            </section>
+                        -->
 
-            <section class="services-feature">
+            <section class="services-feature"
+                     data-aos="zoom-in-left">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4 col-sm-12">
@@ -163,6 +167,42 @@
             </section>
 
 
+            <div class="container" data-aos="zoom-in-down">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6EO8C8FAUdychjlkMwjGeW?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/08gptZYe54a1akkcI3lYhn?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4GGMoHq3pyibur80ZExjA6?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="container">
+                <h1>Recent Artists</h1>
+
+                <div class="gallery-wrap">
+                    <div class="item item-1"></div>
+                    <div class="item item-2"></div>
+                    <div class="item item-3"></div>
+                    <div class="item item-4"></div>
+                    <div class="item item-5"></div>
+                </div>
+            </div>
+
+            <div class="social">
+                <a href="https://twitter.com/StefCharle" target="_blank">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/149103/twitter.svg" alt="">
+                </a>
+            </div>
+
+
+
+            <iframe src="https://app.usemotion.com/meet/grb-audio/meeting" title="Motion Booking Page" width="100%" height="840px" frameborder="0"></iframe>
 
             <!--
 
@@ -177,7 +217,7 @@
                             </div>
                         </section>
 
-                        
+
             <section class="secVid" data-scene>
                 <div class="container">
                     <h2>NEXT UP</h2>
