artist slider update

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </nav>
             </header>
 
-            <section class="banner" data-scene>
+            <section class="banner pb-3" data-scene>
                 <div class="container">
                     <div class="text landing-text" data-aos="zoom-out" data-aos-delay="1000">
                         <h1>Pierre Jülch</h1>
@@ -131,7 +131,7 @@
 
                         -->
 
-            <section class="services-feature"
+            <section class="services-feature pb-3"
                      data-aos="zoom-in-left">
                 <div class="container">
                     <div class="row">
@@ -167,7 +167,7 @@
             </section>
 
 
-            <div class="container" data-aos="zoom-in-down">
+            <div class="container pb-3" data-aos="zoom-in-down">
                 <div class="row">
                     <div class="col-lg-4 col-md-6 mb-4">
                         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6EO8C8FAUdychjlkMwjGeW?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -182,24 +182,62 @@
             </div>
 
 
-            <div class="container">
+            <div class="container recent-artists pb-3">
                 <h1>Recent Artists</h1>
 
                 <div class="gallery-wrap">
-                    <div class="item item-1"></div>
-                    <div class="item item-2"></div>
-                    <div class="item item-3"></div>
-                    <div class="item item-4"></div>
-                    <div class="item item-5"></div>
+                    <div class="item item-1">
+                        <div class="overlay">
+                            <p class="artist-name">Mäx Modestus</p>
+                        </div>
+                        <div class="overlay pt-5">
+                            <div class="presave spotify-logo fs-1 pt-5">
+                                <a title="Spotify" href="https://open.spotify.com/intl-de/artist/19Qu65WLH9NWStheiGAdxj?si=wXu8voXlQJ6pEXzX6NoWvQ" target="_blank"><i class="fa-brands fa-spotify out-now-hover-spotify"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item item-2">
+                        <div class="overlay">
+                            <p class="artist-name">zlato1.5</p>
+                        </div>
+                        <div class="overlay pt-5">
+                            <div class="presave spotify-logo fs-1 pt-5">
+                                <a title="Spotify" href="https://open.spotify.com/intl-de/artist/2q1WHufNKknvEDy8loCR4O?si=NaXXbNuVT7ePVyggxv7S2g" target="_blank"><i class="fa-brands fa-spotify out-now-hover-spotify"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item item-3">
+                        <div class="overlay">
+                            <p class="artist-name">DEMASO</p>
+                        </div>
+                        <div class="overlay pt-5">
+                            <div class="presave spotify-logo fs-1 pt-5">
+                                <a title="Spotify" href="https://open.spotify.com/intl-de/artist/0uN19S11fpDRb97XJ6uwni?si=wyjDbc-_RvGYpw9gc6DRkA" target="_blank"><i class="fa-brands fa-spotify out-now-hover-spotify"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item item-4">
+                        <div class="overlay">
+                            <p class="artist-name">AKABASE</p>
+                        </div>
+                        <div class="overlay pt-5">
+                            <div class="presave spotify-logo fs-1 pt-5">
+                                <a title="Spotify" href="https://open.spotify.com/intl-de/artist/4qB2frv64HgC4s8tSLZtbB?si=kkCRduQSTQWdC3sTLQEoPw" target="_blank"><i class="fa-brands fa-spotify out-now-hover-spotify"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item item-5">
+                        <div class="overlay">
+                            <p class="artist-name">Tiyoto</p>
+                        </div>
+                        <div class="overlay pt-5">
+                            <div class="presave spotify-logo fs-1 pt-5">
+                                <a title="Spotify" href="https://open.spotify.com/intl-de/artist/1WudhOnkqlXOpEXgFLKgqJ?si=UV_MYCFrSzG4zy1mcJllIw" target="_blank"><i class="fa-brands fa-spotify out-now-hover-spotify"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-            <div class="social">
-                <a href="https://twitter.com/StefCharle" target="_blank">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/149103/twitter.svg" alt="">
-                </a>
-            </div>
-
 
 
             <iframe src="https://app.usemotion.com/meet/grb-audio/meeting" title="Motion Booking Page" width="100%" height="840px" frameborder="0"></iframe>
@@ -237,7 +275,7 @@
                 </div>
             </section>
 
-                                                                  -->
+
 
             <section class="secVid" data-scene>
                 <div class="container">
@@ -267,7 +305,7 @@
                     </div>
                 </div>
             </section>
-
+ -->
             <footer data-scene>
                 <div class="container">
                     <div class="footer-inner" data-aos="zoom-in-up">
@@ -288,7 +326,7 @@
                             <ul>
                                 <li><a href="https://www.instagram.com/zlato1.5/" target="_blank">Instagram</a></li>
                                 <li><a href="https://www.tiktok.com/@zlato1.5" target="_blank">TikTok</a></li>
-                                <li><a href="zlato1.5musik@gmail.com">Business Mail: zlato1.5musik@gmail.com</a></li>
+                                <li><a href="kontakt@grb-audio.de">Business Mail: kontakt@grb-audio.de</a></li>
                             </ul>
                         </div>
                     </div>
