--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>GRB-Audio</title>
 
         <link rel="icon" type="image/x-icon" href="assets/img/background.jpg">
-        <link rel="icon" type="image/x-icon" href="assets/pierreImg/1.jpeg">
+        <link rel="icon" type="image/x-icon" href="assets/img/grbLogo.jpeg">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -29,6 +29,7 @@
         <link rel="stylesheet" href="css/footer.css">
         <link rel="stylesheet" href="css/services.css">
         <link rel="stylesheet" href="css/recentArtists.css">
+        <link rel="stylesheet" href="css/popupModal.css">
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
@@ -131,12 +132,11 @@
 
                         -->
 
-            <section class="services-feature pb-3"
-                     data-aos="zoom-in-left">
+            <section class="services-feature pb-3" data-aos="zoom-in-left">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4 col-sm-12">
-                            <div class="box box-1">
+                            <div class="box box-1" data-modal-id="recordModal">
                                 <div class="box-content">
                                     <i class="fa-solid fa-microphone box-content-font"></i>
                                     <p class="box-content-font box-content-font-info">Record</p>
@@ -144,8 +144,90 @@
                                 </div>
                             </div>
                         </div>
+
+                        <!-- Only one overlay covering the page -->
+                        <div class="modal-overlay">
+                            <div id="recordModal" class="modal">
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h2>Step by Step:</h2>
+                                    <h3> Wie funktioniert das Recording?</h3>
+                                    <div class="icon-row">
+                                        <div class="icon-item">
+                                            <i class="fa-solid fa-hand-holding-heart"></i>
+                                            <p>Kontaktiere mich via Motion oder email</p>
+                                        </div>
+                                        <div class="icon-item">
+                                            <i class="fa-solid fa-upload"></i>
+                                            <p>Sende mir deinen Beat fürs Recording</p>
+                                        </div>
+                                        <div class="icon-item">
+                                            <i class="fa-solid fa-microphone-lines"></i>
+                                            <p>Komm ins Studio für die Session</p>
+                                        </div>
+                                        <div class="icon-item">
+                                            <i class="fa-solid fa-download"></i>
+                                            <p>Ich sende dir die Spuren zu</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div id="mixModal" class="modal">
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h2>Step by Step:</h2>
+                                    <h3> Wie funktioniert das Mixing?</h3>
+                                    <div class="icon-row">
+                                        <div class="icon-item">
+                                            <i class="fa-solid fa-hand-holding-heart"></i>
+                                            <p>Kontaktiere mich via Motion oder email</p>
+                                        </div>
+                                        <div class="icon-item">
+                                            <i class="fa-solid fa-upload"></i>
+                                            <p>Sende mir deine Stems für den Mix</p>
+                                        </div>
+                                        <div class="icon-item">
+                                            <i class="fa-solid fa-gears"></i>
+                                            <p>Ich mixe deinen Track</p>
+                                        </div>
+                                        <div class="icon-item">
+                                            <i class="fa-solid fa-download"></i>
+                                            <p>Und sende dir den Mix zu</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div id="masterModal" class="modal">
+                            <div class="modal-content">
+                                <span class="close">&times;</span>
+                                <h2>Step by Step:</h2>
+                                <h3> Wie funktioniert das Mastering?</h3>
+                                <div class="icon-row">
+                                    <div class="icon-item">
+                                        <i class="fa-solid fa-hand-holding-heart"></i>
+                                        <p>Kontaktiere mich via Motion oder email</p>
+                                    </div>
+                                    <div class="icon-item">
+                                        <i class="fa-solid fa-upload"></i>
+                                        <p>Sende mir deine Stems/Song für den Master</p>
+                                    </div>
+                                    <div class="icon-item">
+                                        <i class="fa-solid fa-gears"></i>
+                                        <p>Ich master deinen Track</p>
+                                    </div>
+                                    <div class="icon-item">
+                                        <i class="fa-solid fa-download"></i>
+                                        <p>Und sende dir den Master zu</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="col-md-4 col-sm-12">
-                            <div class="box box-2">
+                            <div class="box box-2" data-modal-id="mixModal">
                                 <div class="box-content">
                                     <i class="fa-solid fa-compact-disc box-content-font"></i>
                                     <p class="box-content-font box-content-font-info">Mix</p>
@@ -153,8 +235,9 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-md-4 col-sm-12">
-                            <div class="box box-3">
+                            <div class="box box-3" data-modal-id="masterModal">
                                 <div class="box-content">
                                     <i class="fa-solid fa-sliders box-content-font"></i>
                                     <p class="box-content-font box-content-font-info">Master</p>
@@ -165,6 +248,7 @@
                     </div>
                 </div>
             </section>
+
 
 
             <div class="container pb-3" data-aos="zoom-in-down">
