--- a/index.html
+++ b/index.html
@@ -60,32 +60,32 @@
                             <div class="navbar-nav navbar-align nav-items desktop-view">
                                 <div class="left-menu nav-fill">
                                     <ul>
-                                        <li><a class="nav-link text-light" href="https://open.spotify.com/intl-de/artist/2q1WHufNKknvEDy8loCR4O" target="_blank">Record</a></li>
-                                        <li><a class="nav-link text-light" href="https://music.apple.com/us/artist/zlato1-5/1659210545" target="_blank">Mix</a></li>
-                                        <li><a class="nav-link text-light" href="https://soundcloud.com/zlato15" target="_blank">Master</a></li>
+                                        <li><a class="nav-link text-light" id="recordLink" href="#" target="_blank">Record</a></li>
+                                        <li><a class="nav-link text-light" id="mixLink" href="#" target="_blank">Mix</a></li>
+                                        <li><a class="nav-link text-light" id="masterLink" href="#" target="_blank">Master</a></li>
                                     </ul>
                                 </div>
                                 <div class="right-menu">
                                     <ul>
-                                        <li><a class="nav-link text-light" href="https://www.instagram.com/zlato1.5/" target="_blank">INSTAGRAM</a></li>
-                                        <li><a class="nav-link text-light" href="https://www.youtube.com/channel/UCK_HqCtD0-UPrQY-oI0XIdw" target="_blank">Spotify</a></li>
-                                        <li><a class="nav-link text-light" href="https://www.tiktok.com/@zlato1.5" target="_blank">Contact</a></li>
+                                        <li><a class="nav-link text-light" href="https://www.instagram.com/pierrejuelch/" target="_blank">INSTAGRAM</a></li>
+                                        <li><a class="nav-link text-light" href="https://open.spotify.com/user/pierrerauchtfettelunten?si=c3269669c27c4264" target="_blank">Spotify</a></li>
+                                        <li><a class="nav-link text-light" id="contact-nav-link" href="#" target="_blank">Contact</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="navbar-nav nav-items mobile-view">
                                 <ul>
-                                    <li><a class="nav-link text-light" href="https://open.spotify.com/intl-de/artist/2q1WHufNKknvEDy8loCR4O" target="_blank">SPOTIFY</a></li>
+                                    <li><a class="nav-link text-light" id="recordLinkMobile" href="#" target="_blank">Record</a></li>
                                     <br>
-                                    <li><a class="nav-link text-light" href="https://music.apple.com/us/artist/zlato1-5/1659210545" target="_blank">APPLE MUSIC</a></li>
+                                    <li><a class="nav-link text-light" id="mixLinkMobile" href="#" target="_blank">Mix</a></li>
                                     <br>
-                                    <li><a class="nav-link text-light" href="https://soundcloud.com/zlato15" target="_blank">SOUNDCLOUD</a></li>
+                                    <li><a class="nav-link text-light" id="masterLinkMobile" href="#" target="_blank">Master</a></li>
                                     <br>
-                                    <li><a class="nav-link text-light" href="https://www.instagram.com/zlato1.5/" target="_blank">INSTAGRAM</a></li>
+                                    <li><a class="nav-link text-light" href="https://www.instagram.com/pierrejuelch/" target="_blank">INSTAGRAM</a></li>
                                     <br>
-                                    <li><a class="nav-link text-light" href="https://www.youtube.com/channel/UCJhUjLDNfRbR4g4ju67v9hg" target="_blank">YOUTUBE</a></li>
+                                    <li><a class="nav-link text-light" href="https://open.spotify.com/user/pierrerauchtfettelunten?si=c3269669c27c4264" target="_blank">Spotify</a></li>
                                     <br>
-                                    <li><a class="nav-link text-light" href="https://www.tiktok.com/@zlato1.5" target="_blank">TIKTOK</a></li>
+                                    <li><a class="nav-link text-light" id="contactLinkMobile" href="#" target="_blank">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -145,86 +145,6 @@
                             </div>
                         </div>
 
-                        <!-- Only one overlay covering the page -->
-                        <div class="modal-overlay">
-                            <div id="recordModal" class="modal">
-                                <div class="modal-content">
-                                    <span class="close">&times;</span>
-                                    <h2>Step by Step:</h2>
-                                    <h3> Wie funktioniert das Recording?</h3>
-                                    <div class="icon-row">
-                                        <div class="icon-item">
-                                            <i class="fa-solid fa-hand-holding-heart"></i>
-                                            <p>Kontaktiere mich via Motion oder email</p>
-                                        </div>
-                                        <div class="icon-item">
-                                            <i class="fa-solid fa-upload"></i>
-                                            <p>Sende mir deinen Beat fürs Recording</p>
-                                        </div>
-                                        <div class="icon-item">
-                                            <i class="fa-solid fa-microphone-lines"></i>
-                                            <p>Komm ins Studio für die Session</p>
-                                        </div>
-                                        <div class="icon-item">
-                                            <i class="fa-solid fa-download"></i>
-                                            <p>Ich sende dir die Spuren zu</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div id="mixModal" class="modal">
-                                <div class="modal-content">
-                                    <span class="close">&times;</span>
-                                    <h2>Step by Step:</h2>
-                                    <h3> Wie funktioniert das Mixing?</h3>
-                                    <div class="icon-row">
-                                        <div class="icon-item">
-                                            <i class="fa-solid fa-hand-holding-heart"></i>
-                                            <p>Kontaktiere mich via Motion oder email</p>
-                                        </div>
-                                        <div class="icon-item">
-                                            <i class="fa-solid fa-upload"></i>
-                                            <p>Sende mir deine Stems für den Mix</p>
-                                        </div>
-                                        <div class="icon-item">
-                                            <i class="fa-solid fa-gears"></i>
-                                            <p>Ich mixe deinen Track</p>
-                                        </div>
-                                        <div class="icon-item">
-                                            <i class="fa-solid fa-download"></i>
-                                            <p>Und sende dir den Mix zu</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div id="masterModal" class="modal">
-                            <div class="modal-content">
-                                <span class="close">&times;</span>
-                                <h2>Step by Step:</h2>
-                                <h3> Wie funktioniert das Mastering?</h3>
-                                <div class="icon-row">
-                                    <div class="icon-item">
-                                        <i class="fa-solid fa-hand-holding-heart"></i>
-                                        <p>Kontaktiere mich via Motion oder email</p>
-                                    </div>
-                                    <div class="icon-item">
-                                        <i class="fa-solid fa-upload"></i>
-                                        <p>Sende mir deine Stems/Song für den Master</p>
-                                    </div>
-                                    <div class="icon-item">
-                                        <i class="fa-solid fa-gears"></i>
-                                        <p>Ich master deinen Track</p>
-                                    </div>
-                                    <div class="icon-item">
-                                        <i class="fa-solid fa-download"></i>
-                                        <p>Und sende dir den Master zu</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
 
                         <div class="col-md-4 col-sm-12">
                             <div class="box box-2" data-modal-id="mixModal">
@@ -242,6 +162,87 @@
                                     <i class="fa-solid fa-sliders box-content-font"></i>
                                     <p class="box-content-font box-content-font-info">Master</p>
                                     <p class="underline-service"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Only one overlay covering the page -->
+                    <div class="modal-overlay">
+                        <div id="recordModal" class="modal">
+                            <div class="modal-content">
+                                <span class="close">&times;</span>
+                                <h2>Step by Step:</h2>
+                                <h3> Wie funktioniert das Recording?</h3>
+                                <div class="icon-row">
+                                    <div class="icon-item">
+                                        <i class="fa-solid fa-hand-holding-heart"></i>
+                                        <p>Kontaktiere mich via Motion oder email</p>
+                                    </div>
+                                    <div class="icon-item">
+                                        <i class="fa-solid fa-upload"></i>
+                                        <p>Sende mir deinen Beat fürs Recording</p>
+                                    </div>
+                                    <div class="icon-item">
+                                        <i class="fa-solid fa-microphone-lines"></i>
+                                        <p>Komm ins Studio für die Session</p>
+                                    </div>
+                                    <div class="icon-item">
+                                        <i class="fa-solid fa-download"></i>
+                                        <p>Ich sende dir die Spuren zu</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div id="mixModal" class="modal">
+                            <div class="modal-content">
+                                <span class="close">&times;</span>
+                                <h2>Step by Step:</h2>
+                                <h3> Wie funktioniert das Mixing?</h3>
+                                <div class="icon-row">
+                                    <div class="icon-item">
+                                        <i class="fa-solid fa-hand-holding-heart"></i>
+                                        <p>Kontaktiere mich via Motion oder email</p>
+                                    </div>
+                                    <div class="icon-item">
+                                        <i class="fa-solid fa-upload"></i>
+                                        <p>Sende mir deine Stems für den Mix</p>
+                                    </div>
+                                    <div class="icon-item">
+                                        <i class="fa-solid fa-gears"></i>
+                                        <p>Ich mixe deinen Track</p>
+                                    </div>
+                                    <div class="icon-item">
+                                        <i class="fa-solid fa-download"></i>
+                                        <p>Und sende dir den Mix zu</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div id="masterModal" class="modal">
+                        <div class="modal-content">
+                            <span class="close">&times;</span>
+                            <h2>Step by Step:</h2>
+                            <h3> Wie funktioniert das Mastering?</h3>
+                            <div class="icon-row">
+                                <div class="icon-item">
+                                    <i class="fa-solid fa-hand-holding-heart"></i>
+                                    <p>Kontaktiere mich via Motion oder email</p>
+                                </div>
+                                <div class="icon-item">
+                                    <i class="fa-solid fa-upload"></i>
+                                    <p>Sende mir deine Stems/Song für den Master</p>
+                                </div>
+                                <div class="icon-item">
+                                    <i class="fa-solid fa-gears"></i>
+                                    <p>Ich master deinen Track</p>
+                                </div>
+                                <div class="icon-item">
+                                    <i class="fa-solid fa-download"></i>
+                                    <p>Und sende dir den Master zu</p>
                                 </div>
                             </div>
                         </div>
@@ -324,7 +325,7 @@
             </div>
 
 
-            <iframe src="https://app.usemotion.com/meet/grb-audio/meeting" title="Motion Booking Page" width="100%" height="840px" frameborder="0"></iframe>
+            <iframe id="contactSection" src="https://app.usemotion.com/meet/grb-audio/meeting" title="Motion Booking Page" width="100%" height="840px" frameborder="0"></iframe>
 
             <!--
 
