--- a/index.html
+++ b/index.html
@@ -400,16 +400,14 @@
                         </div>
                         <div class="col">
                             <ul>
-                                <li><a href="https://open.spotify.com/intl-de/artist/2q1WHufNKknvEDy8loCR4O" target="_blank">Spotify</a></li>
-                                <li><a href="https://music.apple.com/us/artist/zlato1-5/1659210545" target="_blank">Apple Music</a></li>
-                                <li><a href="https://soundcloud.com/zlato15" target="_blank">Soundcloud</a></li>
-                                <li><a href="https://www.youtube.com/channel/UCJhUjLDNfRbR4g4ju67v9hg" target="_blank">Youtube</a></li>
+
+                                <li><a href="https://www.instagram.com/pierrejuelch/" target="_blank">Instagram</a></li>
+                                <li><a href="https://open.spotify.com/user/pierrerauchtfettelunten?si=c3269669c27c4264" target="_blank">Spotify</a></li>
                             </ul>
                         </div>
                         <div class="col">
                             <ul>
-                                <li><a href="https://www.instagram.com/zlato1.5/" target="_blank">Instagram</a></li>
-                                <li><a href="https://www.tiktok.com/@zlato1.5" target="_blank">TikTok</a></li>
+                                <li><a href="#" target="_blank">Impressum</a></li>
                                 <li><a href="kontakt@grb-audio.de">Business Mail: kontakt@grb-audio.de</a></li>
                             </ul>
                         </div>
