--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
                         -->
 
-            <section class="services-feature pb-3" data-aos="zoom-in-left">
+            <section class="services-feature pb-3" id="services-helper" data-aos="zoom-in-left">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4 col-sm-12">
