--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                         </div>
                         <div class="col">
                             <ul>
-                                <li><a href="#" target="_blank">Impressum</a></li>
+                                <li><a href="imprint.html" target="_blank" rel="noopener noreferrer">Impressum</a></li>
                                 <li><a href="kontakt@grb-audio.de">Business Mail: kontakt@grb-audio.de</a></li>
                             </ul>
                         </div>
