--- a/imprint.html
+++ b/imprint.html
@@ -98,7 +98,7 @@
                 <div class="col">
                     <ul>
 
-                        <li><a href="https://www.instagram.com/pierrejuelch/" target="_blank">Instagram</a></li>
+                        <li><a href="https://www.instagram.com/grb_audio?igsh=eHE2d3hrMXdvMG0%3D&utm_source=qr" target="_blank">Instagram</a></li>
                         <li><a href="https://open.spotify.com/user/pierrerauchtfettelunten?si=c3269669c27c4264" target="_blank">Spotify</a></li>
                     </ul>
                 </div>
