--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 </div>
                                 <div class="right-menu">
                                     <ul>
-                                        <li><a class="nav-link text-light" href="https://www.instagram.com/pierrejuelch/" target="_blank">INSTAGRAM</a></li>
+                                        <li><a class="nav-link text-light" href="https://www.instagram.com/grb_audio?igsh=eHE2d3hrMXdvMG0%3D&utm_source=qr" target="_blank">INSTAGRAM</a></li>
                                         <li><a class="nav-link text-light" href="https://open.spotify.com/user/pierrerauchtfettelunten?si=c3269669c27c4264" target="_blank">Spotify</a></li>
                                         <li><a class="nav-link text-light" id="contact-nav-link" href="#" target="_blank">Contact</a></li>
                                     </ul>
@@ -81,7 +81,7 @@
                                     <br>
                                     <li><a class="nav-link text-light" id="masterLinkMobile" href="#" target="_blank">Master</a></li>
                                     <br>
-                                    <li><a class="nav-link text-light" href="https://www.instagram.com/pierrejuelch/" target="_blank">INSTAGRAM</a></li>
+                                    <li><a class="nav-link text-light" href="https://www.instagram.com/grb_audio?igsh=eHE2d3hrMXdvMG0%3D&utm_source=qr" target="_blank">INSTAGRAM</a></li>
                                     <br>
                                     <li><a class="nav-link text-light" href="https://open.spotify.com/user/pierrerauchtfettelunten?si=c3269669c27c4264" target="_blank">Spotify</a></li>
                                     <br>
@@ -97,7 +97,6 @@
                 <div class="container">
                     <div class="text landing-text" data-aos="zoom-out" data-aos-delay="1000">
                         <h1>Pierre Jülch</h1>
-                        <p>Der letzte Mix/Master Engineer den du kontaktieren wirst!</p>
                     </div>
                     <div class="go-to-helper">
                         <a href="#" class="go-to go-to-mobile"></a>
@@ -233,7 +232,7 @@
                                 </div>
                                 <div class="icon-item">
                                     <i class="fa-solid fa-upload"></i>
-                                    <p>Sende mir deine Stems/Song für den Master</p>
+                                    <p>Sende mir die Stems/Song für den Master</p>
                                 </div>
                                 <div class="icon-item">
                                     <i class="fa-solid fa-gears"></i>
@@ -401,7 +400,7 @@
                         <div class="col">
                             <ul>
 
-                                <li><a href="https://www.instagram.com/pierrejuelch/" target="_blank">Instagram</a></li>
+                                <li><a href="https://www.instagram.com/grb_audio?igsh=eHE2d3hrMXdvMG0%3D&utm_source=qr" target="_blank">Instagram</a></li>
                                 <li><a href="https://open.spotify.com/user/pierrerauchtfettelunten?si=c3269669c27c4264" target="_blank">Spotify</a></li>
                             </ul>
                         </div>
